testsuite/tests/properties/invalid_external/invalid_abstract/test.lkt
from common import FooNode

@abstract class AbstractExample: FooNode {
    @exported @external() @abstract fun p(): Bool
}

class Example: AbstractExample {
    fun p(): Bool = false
}
